Updated UI theme and added logout feature

--- a/profile.html
+++ b/profile.html
@@ -51,10 +51,14 @@
 <div class="container py-4">
 
   <!-- Header -->
-  <div class="d-flex justify-content-between align-items-center mb-4 p-3 shadow-sm header-bar">
-    <h3 class="m-0 brand-title">Emotion Community</h3>
-    <a href="dashboard.html" class="btn btn-outline-secondary btn-sm">Back</a>
+ <div class="d-flex justify-content-between align-items-center mb-4 p-3 shadow-sm header-bar">
+  <h3 class="m-0 brand-title">Emotion Community</h3>
+
+  <div>
+    <a href="dashboard.html" class="btn btn-outline-secondary btn-sm me-2">Back</a>
+    <button class="btn btn-outline-danger btn-sm" onclick="logout()">Logout</button>
   </div>
+</div>
 
   <!-- Profile Info -->
   <div class="card stat-card shadow-sm p-4 mb-4">
@@ -90,7 +94,7 @@
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
 const firebaseConfig = {
@@ -143,6 +147,10 @@ onAuthStateChanged(auth, async (user) => {
   document.getElementById("postCount").innerText = postCount;
   document.getElementById("reactionCount").innerText = totalReactions;
 });
+window.logout = async function() {
+  await signOut(auth);
+  window.location.href = "login.html";
+};
 </script>
 
 </body>
